--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -18,6 +18,11 @@ ro:
   last_name: "Nume"
   signup_names_error: "Trebuie să completezi numele și prenumele"
   signup_email_error: "Trebuie să introduci o adresă de e-mail validă"
+  homepage: "Acasa"
+  my_profile: "Profilul meu"
+  selling: "Vanzari"
+  buying: "Cumparari"
+  rentals: "Inchirieri"
 
   activerecord:
     errors:
@@ -28,8 +33,207 @@ ro:
               blank: "Trebuie să introduci o parolă"
               too_short: "Parola trebuie să conțină minimum 8 caractere"
 
+  date:
+    abbr_day_names:
+    - Dum
+    - Lun
+    - Mar
+    - Mie
+    - Joi
+    - Vin
+    - Sâm
+    abbr_month_names:
+    - 
+    - Ian
+    - Feb
+    - Mar
+    - Apr
+    - Mai
+    - Iun
+    - Iul
+    - Aug
+    - Sep
+    - Oct
+    - Noi
+    - Dec
+    day_names:
+    - Duminică
+    - Luni
+    - Marți
+    - Miercuri
+    - Joi
+    - Vineri
+    - Sâmbată
+    formats:
+      default: ! '%d-%m-%Y'
+      long: ! '%d %B %Y'
+      short: ! '%d %b'
+    month_names:
+    - 
+    - Ianuarie
+    - Februarie
+    - Martie
+    - Aprilie
+    - Mai
+    - Iunie
+    - Iulie
+    - August
+    - Septembrie
+    - Octombrie
+    - Noiembrie
+    - Decembrie
+    order:
+    - :day
+    - :month
+    - :year
   datetime:
     distance_in_words:
+      about_x_hours:
+        few: aproximativ %{count} ore
+        one: aproximativ o oră
+        other: aproximativ %{count} ore
+      about_x_months:
+        few: aproximativ %{count} luni
+        one: aproximativ o lună
+        other: aproximativ %{count} luni
+      about_x_years:
+        few: aproximativ %{count} ani
+        one: aproximativ un an
+        other: aproximativ %{count} ani
+      almost_x_years:
+        few: aproape %{count} ani
+        one: aproape 1 an
+        other: aproape %{count} ani
+      half_a_minute: jumătate de minut
+      less_than_x_minutes:
+        few: mai puțin de %{count} minute
+        one: mai puțin de un minut
+        other: mai puțin de %{count} minute
+      less_than_x_seconds:
+        few: mai puțin de %{count} secunde
+        one: mai puțin de o secundă
+        other: mai puțin de %{count} secunde
+      over_x_years:
+        few: mai mult de %{count} ani
+        one: mai mult de un an
+        other: mai mult de %{count} ani
       x_days:
-        one: 'o zi'
-        more: '%{count} zile'
+        few: ! '%{count} zile'
+        one: 1 zi
+        other: ! '%{count} zile'
+      x_minutes:
+        few: ! '%{count} minute'
+        one: 1 minut
+        other: ! '%{count} minute'
+      x_months:
+        few: ! '%{count} luni'
+        one: 1 lună
+        other: ! '%{count} luni'
+      x_seconds:
+        few: ! '%{count} secunde'
+        one: 1 secundă
+        other: ! '%{count} secunde'
+    prompts:
+      day: Ziua
+      hour: Ora
+      minute: Minutul
+      month: Luna
+      second: Secunda
+      year: Anul
+  errors:
+    format: ! '%{attribute} %{message}'
+    messages:
+      accepted: trebuie dat acceptul
+      blank: nu poate fi gol
+      confirmation: nu este confirmat
+      empty: nu poate fi gol
+      equal_to: trebuie să fie egal cu %{count}
+      even: trebuie să fie impar
+      exclusion: este rezervat
+      greater_than: trebuie să fie mai mare decât %{count}
+      greater_than_or_equal_to: trebuie să fie mai mare sau egal cu %{count}
+      inclusion: nu este inclus în listă
+      invalid: este invalid
+      less_than: trebuie să fie mai mic decât %{count}
+      less_than_or_equal_to: trebuie să fie mai mic sau egal cu %{count}
+      not_a_number: nu este un număr
+      not_an_integer: trebuie să fie un mumăr întreg
+      odd: trebuie să fie par
+      record_invalid: Validare nereuşită %{errors}
+      taken: este deja folosit
+      too_long: este prea lung (se pot folosi maximum %{count} caractere)
+      too_short: este prea scurt (minimum de caractere este %{count})
+      wrong_length: nu are lungimea corectă (trebuie să aiba %{count} caractere)
+    template:
+      body: ! 'Încearcă să corectezi urmatoarele câmpuri:'
+      header:
+        few: ! 'Nu am putut salva acest %{model}: %{count} erori.'
+        one: ! 'Nu am putut salva acest %{model}: o eroare'
+        other: ! 'Nu am putut salva acest %{model}: %{count} erori.'
+  helpers:
+    select:
+      prompt: Alegeţi
+    submit:
+      create: Creare %{model}
+      submit: Salvare %{model}
+      update: Modificare %{model}
+  number:
+    currency:
+      format:
+        delimiter: .
+        format: ! '%n %u'
+        precision: 2
+        separator: ! ','
+        significant: false
+        strip_insignificant_zeros: false
+        unit: RON
+    format:
+      delimiter: ! ','
+      precision: 3
+      separator: .
+      significant: false
+      strip_insignificant_zeros: false
+    human:
+      decimal_units:
+        format: ! '%n %u'
+        units:
+          billion: Miliard
+          million: Milion
+          quadrillion: Quadrilion
+          thousand: Mie
+          trillion: Trilion
+          unit: ''
+      format:
+        delimiter: ! ','
+        precision: 3
+        significant: true
+        strip_insignificant_zeros: true
+      storage_units:
+        format: ! '%n %u'
+        units:
+          byte:
+            few: Bytes
+            one: Byte
+            other: Bytes
+          gb: GB
+          kb: KB
+          mb: MB
+          tb: TB
+    percentage:
+      format:
+        delimiter: ! ','
+    precision:
+      format:
+        delimiter: ''
+  support:
+    array:
+      last_word_connector: ! ' şi '
+      two_words_connector: ! ' şi '
+      words_connector: ! ', '
+  time:
+    am: ''
+    formats:
+      default: ! '%a %d %b %Y, %H:%M:%S %z'
+      long: ! '%d %B %Y %H:%M'
+      short: ! '%d %b %H:%M'
+    pm: ''
