--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -1,28 +1,226 @@
 ro:
-  about: "Despre noi"
-  news: "Știri"
-  offers: "Anunțuri"
-  jobs: "Jobs"
-  suppliers: "Furnizori"
-  edit_profile: "Editează profilul"
-  sign_out: "Deconectează-te"
-  sign_up: "Înscrie-te"
-  sign_in: "Conectează-te"
-  your_email: "E-mailul tău"
-  password: "Parola"
-  remember_me: "Nu mă deconecta"
-  forgot_password: "Ai uitat parola?"
-  lp_subtitle_html: "Suntem o comunitate <span class='font-semibold'>cu circuit închis</span>, dedicată medicilor dentiști."
-  pick_language: "Alege limba:"
-  first_name: "Prenume"
-  last_name: "Nume"
-  signup_names_error: "Trebuie să completezi numele și prenumele"
-  signup_email_error: "Trebuie să introduci o adresă de e-mail validă"
+  pick_language: "Alegeti limba:"
   homepage: "Acasa"
-  my_profile: "Profilul meu"
-  selling: "Vanzari"
-  buying: "Cumparari"
-  rentals: "Inchirieri"
+  delete: "Sterge"
+  cancel: "Anuleaza"
+  post: "Posteaza"
+  edit: "Editeaza"
+  save: "Salveaza"
+  by: "de"
+  valid_until: "Valid pana la"
+  posted_by: "Postat de"
+  posted_on: "Postat la"
+  added_by: "Adaugat de"
+  publish_at: "Publicat la"
+  views: "Vizualizari"
+  modified: "Modificat"
+  x_out_of_y: "%{x} din %{y}"
+  of: "din"
+  administrator: "Administrator"
+  unspecified: "nespecificat"
+  in: "in"
+
+  header:
+    home: "Acasa"
+    news: "Stiri"
+    my_profile: "Profilul meu"
+    specializations: "Specializari"
+    offers: "Oferte"
+    selling: "Vanzari"
+    buying: "Cumparari"
+    rentals: "Inchirieri"
+    blacklist: "Rau-platnici"
+    jobs: "Joburi"
+    suppliers: "Furnizori"
+    international: "International"
+    romania: "Romania"
+    edit_profile: "Editeaza profilul"
+    sign_out: "Deconecteaza-te"
+    search: "Cauta"
+    chat: "Chat"
+
+  lp:
+    html_title: "Bine ati venit la Dent Group"
+    html_description: "Dent Group"
+    navi:
+      your_email: "E-mailul tau"
+      password: "Parola"
+      remember_me: "Nu ma deconecta"
+      forgot_password: "Am uitat parola"
+      sign_in: "Conecteaza-te"
+      create_account: "Inscrie-te"
+    texts:
+      lets_work: "Haideti sa lucram impreuna!"
+      about: "DESPRE DENT GROUP"
+      connects_big: "%{logo_image} <span class='font-semibold'>te conecteaza</span> cu colegii <span class='font-semibold'>din intreaga lume</span>"
+      we_can_offer: "Ce va putem <span class='font-semibold'>oferi dumneafoasta:</span>"
+      all_rights_reserved: "Toate drepturile rezervate."
+      connect: "Conecteaza-te"
+      connect_desc: "Dent Group pune bazele unei noi conexiuni intre medicii stomatologi din intreaga lume in deplina intimitate."
+      connect_tooltip: "<p><span class='red bold'>Dent Group</span> pune bazele unei noi conexiuni avand ca scop asigurarea unei comunicari, organizari si sistematizari a cunostintelor in domeniul stomatologiei.</p><p>Site-ul online <span class='red bold'>Dent Group</span> are ca viziune munca in echipa, conturata sub forma unui site cu circuit inchis, ca raspuns la necesitatile de comunicare pentru medicii stomatologi din intreaga lume.</p><p><span class='red bold'>Dent Group</span> se concentreaza asupra formarii unei comunitati la scara cat mai larga, pentru a construi o unitate relationala de maxima receptivitate pentru toti medicii stomatoligi, ce poate fi inteleasa prin optimizarea comunicarii online intre acestia, prioritara fiind incurajarea creativitatii, enuntarea unor idei, a unor opinii originale din partea membrilor acestui site.</p>"
+      share: "Distribuie"
+      share_desc: "Aveti posibilitatea de a impartasi idei si opinii personale care pot fi citite si luate in considerare de ceilalti medici membrii utilizatori ai site-ului."
+      share_tooltip: "<p>Accesand site-ul online <span class='red bold'>Dent Group</span> aveti posibilitatea de a impartasi idei si opinii personale care pot fi citite si luate in considerare de ceilalti medici membrii utilizatori ai site-ului.</p><p>Astfel vi se ofera sansa de a posta fotografii dar si experiente placute sau neplacute din timpul operatiilor sau lucrarilor dentare, care pot fi folosite sub forma de indrumare profesionala pentru toti medicii stomatologi.</p>"
+      discuss: "Discuta"
+      discuss_desc: "Primul si singurul site online dedicat medicilor stomatologi care poate fi folosit pentru a comunica cat mai eficient."
+      discuss_tooltip: "<p>O Comunicare eficienta este cheia increderii intre medicii stomatologi, un principiu solid in stabilirea unei unitati functionale facilitand accesul la informatii in tratamentul dentar oferit pacientilor.</p><p><span class='red bold'>Dent Group</span> este site-ul care te ajuta sa comunici si sa stabilesti relatii de colegialitate eficiente si de durata cu medici aflati atat pe plan national cat si pe plan international.</p><p>World Wide Networking - un concept pe care acest site il dezvolta pentru a pune in contact practicantii acestei meserii, locul unde ideile si informatiile se concentreaza, pentru a fi 'livrate' ulterior celor ce sunt interesati.</p><p>Site-ul are un caracter de circuit inchis putend fi accesat doar de medicii stomatologi membrii activi ai acestui site.</p>"
+      a_lot_more: "Multe altele"
+      a_lot_more_desc: "Utilizarea site-ului Dent Group este la indemana fiecarui medic stomatolog, si are ca obiectiv, stabilirea bazelor unui sistem relational pentru a imbunatati calitativ deciziile membrilor acestui grup online."
+      a_lot_more_tooltip: "<p><span class='red bold'>Dent Group</span> incurajeaza in permanenta preocuparea pentru ridicarea continuă a pregătirii profesionale şi dăruirea la locul de muncă. Relaţiile de cooperare faciliteaza solutionarea rapida a unor probleme care apar spontan sau periodic si pot avea rezultate pozitive in planul creşterii operativităţii profesionale sau eficientizarii volumului de munca depus.</p><p>Veti avea acces la stiri, informatii despre furnizori si vanzari, cumparari si inchirieri de echipamente, chat, angajari, rau-platnici - totul pentru un abonament lunar in valoare de numai 7 euro.</p><p class='bold'>Inregistrati-va acum si veti avea prima luna gratuita.</p>"
+    pass:
+      change_password: "Schimba parola"
+      new_password: "Parola noua"
+      confirm_new_password: "Confirmati noua parola"
+    signup:
+      your_email: "E-mailul tau"
+      password: "Parola"
+      sign_up: "Inscrie-te"
+      first_name: "Prenume"
+      last_name: "Nume"
+      signup_names_error: "Completati-va numele si prenumele."
+      signup_email_error: "Completati-va adresa de e-mail."
+    emailconf:
+      required: "Confirmarea adrese de e-mail"
+      description: "V-am trimis un e-mail catre %{email} cu instructiuni pentru cum sa va confirmati adresa de e-mail.<br/>Daca nu ati primit e-mailul, apasati pe butonul de mai jos pentru a-l retrimite."
+      resend_email: "Retrimite e-mailul"
+
+  status:
+    delete_confirmation: "Sigur vreti sa stergeti acest status?"
+    comment_delete_confirmation: "Sigur vreti sa stergeti acest comentariu?"
+    view_more_comments: "Vezi mai mult comentarii"
+    write_a_comment: "Scrie un comentariu"
+
+  blacklist:
+    title: "Rau-platnici"
+    edit_title: "Editati rau-platnic"
+    label_name: "Nume"
+    label_cnp: "CNP"
+    label_cnp_info: "Ultimele patru cifre"
+    label_reason: "Motivul"
+    delete_confirmation: "Sigur doriti sa stergeti acest anunt?"
+    add_new_customer: "Adaugati un rau-platnic"
+    reported_on: "Semnalat la"
+    report_customer: "Adaugare rau-platnic"
+    add_comment: "Adauga comentariu"
+    comment_delete_confirmation: "Sigur doriti sa stergeti acest comentariu?"
+
+  jobs:
+    title: "Joburi"
+    job: "Job"
+    company: "Companie"
+    location: "Locatie"
+    type: "Tip"
+    positions_opened: "Pozitii disponibile"
+    job_title: "Titlul jobului"
+    description: "Descriere"
+    image: "Imagine"
+    country: "Tara"
+    city: "Orasul"
+    full_time: "Full time"
+    part_time: "Part time"
+    count: "Numarul de posturi"
+    wage_offer: "Oferta salariala"
+    contact_email: "E-mail de contact"
+    contact_phone: "Telefon de contact"
+    delete_confirmation: "Sigur doriti sa stergeti acest anunt?"
+    add_new_job: "Adauga un job nou"
+
+  news:
+    title: "Stiri"
+    one_news: "Stire"
+    loading: "Se incarca..."
+    load_more: "Afisati mai multe"
+
+  offers:
+    title: "Oferte"
+    offer: "Oferta"
+    type: "Tip"
+    selling: "Vanzare"
+    buying: "Cumparare"
+    add_new_offer: "Adaugati o oferta noua"
+    rental: "Inchiriere"
+    contact_email: "E-mail de contact"
+    contact_phone: "Telefon de contact"
+
+  suppliers:
+    title: "Furnizori"
+    supplier: "Furnizor"
+    address: "Adresa"
+    location: "Locatie"
+    add_new_supplier: "Adauga furnizori"
+    email: "E-mail"
+    phone: "Telefon"
+    address: "Adresa"
+
+  search:
+    title: "Rezultatele cautarii"
+    search: "Cauta"
+    search_results_for: "Rezultatele cautarii pentru"
+
+  chat:
+    search: "Cautare"
+    toggle_chat: "Afisare chat"
+    ignore_user: "Ignora utilizatorul"
+    unignore_user: "Anulati ignorarea"
+    loading: "Se incarca..."
+
+  home:
+    title: "Acasa"
+
+  hmessages:
+    title: "Homepage messages"
+    manage_messages: "Administreaza mesajele"
+    manage_categories: "Administreaza categoriile de mesaje"
+    no_message: "Niciun mesaj."
+    recently_added: "Adaugate Recent"
+    categories: "Categorii"
+    edit_message: "Editeaza mesajul"
+    label_title: "Titlu"
+    category: "Categoria"
+    country: "Tara"
+    content: "Continut"
+    delete_confirmation: "Sigur doriti sa stergeti acest mesaj?"
+    add_new_message: "Adauga mesaj"
+    add_new_category: "Adauga categorie"
+    name: "Nume"
+    messages_count: "Numar mesaje"
+
+  users:
+    user: "Utilizator"
+    follow: "Urmareste"
+    unfollow: "Anulati urmarirea"
+    profile:
+      edit_profile: "Editeaza profilul"
+      chat_options: "Optiuni pentru chat"
+      chat_opts_desc: "Aici puteti ajusta diferite optiuni pentur chat."
+      invisible_mode: "Modul Invizibil"
+      invisible_mode_desc: "Activati acest mod daca doriti sa nu mai fiti vizibil pentru ceilalti utilizatori din chat."
+      my_profile: "Profilul meu"
+      post_something: "Posteaza ceva..."
+      loading: "Se incarca..."
+      load_more: "Afisati mai multe"
+      add_image: "Adauga imagine"
+      edit:
+        description: "Completati campurile de mai jos pentru a va actualiza profilul."
+        general_information: "Informatii Generale"
+        first_name: "Prenume"
+        last_name: "Nume"
+        email: "E-mail"
+        specialization: "Specializare"
+        language: "Limba"
+        country: "Tara"
+        city: "Orasul"
+        contact_info: "Informatii de contact"
+        phone: "Telefon"
+        change_password: "Schimba parola"
+        current_password: "Parola curenta"
+        new_password: "Paroal noua"
+        confirm_password: "Confirmati parola"
+        change: "Schimba"
+        upload_desc: "Alegeti un fisier pentru a-l incarca. Numai JPG si PNG sunt acceptate."
+        change_profile_pic: "Schimba imaginea de profil"
+        choose_a_picture: "Alegeti o imagine"
+        upload: "Salveaza"
 
   activerecord:
     errors:
